# kams-bot-flutter

./: README.md  pubspec.yaml
.github/workflows/: build-all.yml  build-windows.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android/app/src/main/kotlin/com/kamsbot/kams_bot/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: chat_screen.dart  chat_viewmodel.dart
lib/services/: ai_service.dart  native_service.dart  ollama_service.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
